[gd_scene load_steps=23 format=3 uid="uid://c1utx3knit8k5"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ciy38vertkdr0" path="res://scenes/player.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://r1m8evt7twoo" path="res://resources/Oswald-VariableFont_wght.ttf" id="3"]
[ext_resource type="AudioStream" uid="uid://cnf81j7axmvhc" path="res://resources/sounds/mixkit-short-buzzer-sound-2963.wav" id="4"]
[ext_resource type="Texture2D" uid="uid://coypsgwrk3yp3" path="res://resources/pause_sign.png" id="5"]
[ext_resource type="FontFile" path="res://resources/font.tres" id="6"]
[ext_resource type="Texture2D" uid="uid://bxuc2cotw5rd0" path="res://resources/audio_on.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dt5aa3l3usggu" path="res://resources/audio_off.png" id="8"]
[ext_resource type="Texture2D" uid="uid://c6wxl5qjjjt1k" path="res://resources/square.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dc1hw6dmlapxl" path="res://resources/splash.png" id="10"]
[ext_resource type="Material" uid="uid://b2dxgb2g506wk" path="res://scenes/shockWave.tres" id="11"]

[sub_resource type="Animation" id="12"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SC/score:theme_override_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("shockwave:material:shader_param/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="16"]
resource_name = "shock"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shockwave:material:shader_param/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5]
}

[sub_resource type="Animation" id="13"]
resource_name = "tween"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SC/score:theme_override_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [120, 110, 100]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fsewe"]
_data = {
"RESET": SubResource("12"),
"shock": SubResource("16"),
"tween": SubResource("13")
}

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/64/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/64/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/12/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="14"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/36/0 = Vector2(0, 0)
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/36/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/36/0/kerning_overrides/36/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/48/0 = Vector2(0, 0)
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/48/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/48/0/kerning_overrides/48/0 = Vector2(0, 0)

[sub_resource type="Environment" id="15"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="player" parent="." instance=ExtResource("2")]
collision_layer = 3
mass = 1.0

[node name="Camera2D2" type="Camera2D" parent="player"]
zoom = Vector2(1.5, 1.5)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="player"]
stream = ExtResource("4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -2.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="shockwave" type="ColorRect" parent="CanvasLayer/Control"]
material = ExtResource("11")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control"]
libraries = {
"": SubResource("AnimationLibrary_fsewe")
}

[node name="SC" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -1.0
offset_top = 64.0
offset_right = 199.0
offset_bottom = 250.0

[node name="score" type="Label" parent="CanvasLayer/Control/SC"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_stretch_ratio = 20.0
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 64
text = "00000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="highscore" type="Label" parent="CanvasLayer/Control/SC"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 32
text = "00000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fpstxt" type="Label" parent="CanvasLayer/Control/SC"]
custom_minimum_size = Vector2(80, 45)
layout_mode = 2
theme_override_fonts/font = SubResource("7")
text = "FPS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bt" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -159.0
offset_right = 219.0
offset_bottom = 240.0

[node name="watchad" type="Button" parent="CanvasLayer/Control/bt"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = SubResource("14")
theme_override_font_sizes/font_size = 36
text = "WATCH AD"
flat = true

[node name="replay_button" type="Button" parent="CanvasLayer/Control/bt"]
custom_minimum_size = Vector2(280, 140)
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 36
text = "REPLAY"
flat = true

[node name="main_menu_button" type="Button" parent="CanvasLayer/Control/bt"]
custom_minimum_size = Vector2(440, 150)
layout_mode = 2
theme_override_fonts/font = SubResource("4")
theme_override_font_sizes/font_size = 36
text = "MAIN MENU"
flat = true

[node name="pause" type="Button" parent="CanvasLayer/Control"]
custom_minimum_size = Vector2(95, 105)
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 64.0
offset_right = -111.0
offset_bottom = 169.0
focus_mode = 0
icon = ExtResource("5")
flat = true
expand_icon = true

[node name="showfps" type="Button" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0.862745)
custom_minimum_size = Vector2(185, 100)
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_top = 175.0
offset_right = -69.0
offset_bottom = 275.0
focus_mode = 0
theme_override_fonts/font = SubResource("11")
theme_override_font_sizes/font_size = 32
text = "Show FPS"
flat = true
icon_alignment = 1
expand_icon = true

[node name="audio" type="TextureButton" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 95.0
offset_top = -194.0
offset_right = 549.0
offset_bottom = 326.0
grow_vertical = 0
scale = Vector2(0.23, 0.23)
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("7")
texture_pressed = ExtResource("8")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("15")

[node name="lava" type="Sprite2D" parent="."]
modulate = Color(1.3, 0.5, 0, 1)
z_index = 4
position = Vector2(0, 1579)
scale = Vector2(13.7587, 7.33123)
texture = ExtResource("9")

[node name="Node2D" type="Node2D" parent="lava"]
position = Vector2(0, -153.999)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = ExtResource("11")
position = Vector2(-807.5, -345)
scale = Vector2(2.534, 1.892)
texture = ExtResource("10")

[connection signal="button_down" from="CanvasLayer/Control/bt/watchad" to="." method="_on_watchad_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/bt/replay_button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/bt/main_menu_button" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/pause" to="." method="_on_pause_button_down"]
[connection signal="button_up" from="CanvasLayer/Control/pause" to="." method="_on_pause_button_up"]
[connection signal="button_down" from="CanvasLayer/Control/showfps" to="." method="_on_showfps_button_down"]
[connection signal="toggled" from="CanvasLayer/Control/audio" to="." method="_on_audio_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
